syntax = "proto3";

option csharp_namespace = "BikeRental.Contracts.Grpc";

message RentalGenerationRequest {
  string request_id = 1;
  int32 count = 2;
  int32 batch_size = 3;
}

message RentalContractMessage {
  string id = 1;
  string bike_id = 2;
  string renter_id = 3;
  int32 duration_hours = 4;
  string start_time = 5;
}

message RentalBatchStreamMessage {
  string request_id = 1;
  repeated RentalContractMessage rentals = 2;
  bool is_final = 3;
}

service RentalIngestor {
  rpc StreamRentals (stream RentalGenerationRequest) returns (stream RentalBatchStreamMessage);
}
